--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
           <div class="property-container">
             <div class="property-title">
               <span>Residential</span>
-              <h3><a href="#">3710 Murang`a <br>
-                  Murang`a, Ca 90066</a></h3>
+              <h3><a href="#"> Murang`a <br>
+                  Murang`a</a></h3>
             </div>
             <div class="property-button">
               <a href="#">Read more</a>
@@ -135,8 +135,8 @@
           <div class="property-container">
             <div class="property-title">
               <span>Residential</span>
-              <h3><a href="#"> Saltair Ave <br>
-                  Murang`a, Ca 90049</a></h3>
+              <h3><a href="#"><br>
+                  Murang`a</a></h3>
             </div>
             <div class="property-button">
               <a href="#">Read more</a>
@@ -152,8 +152,8 @@
           <div class="property-container">
             <div class="property-title-sm">
               <span>Residential</span>
-              <h3><a href="#">736 Murang`a <br>
-                  , Ca 90291</a></h3>
+              <h3><a href="#">Murang`a <br>
+                  </a></h3>
             </div>
             <div class="property-button-sm">
               <a href="#">Read more</a>
@@ -169,7 +169,7 @@
           <div class="property-container">
             <div class="property-title-sm">
               <span>Residential</span>
-              <h3><a href="#">3501  Ave <br>
+              <h3><a href="#"><br>
                   Murang`a</a></h3>
             </div>
             <div class="property-button-sm">
@@ -187,7 +187,7 @@
           <div class="property-container">
             <div class="property-title-sm">
               <span>Residential</span>
-              <h3><a href="#">9958 <br>
+              <h3><a href="#"><br>
                   Murang`a,</a></h3>
             </div>
             <div class="property-button-sm">
@@ -205,7 +205,7 @@
             <div class="property-title-sm">
               <span>Residential</span>
               <h3><a href="#"> <br>
-                  Murang`a, Ca 90046</a></h3>
+                  Murang`a </a></h3>
             </div>
             <div class="property-button-sm">
               <a href="#">Read more</a>
